# roboime-next

./: .appveyor.yml  .demo-ai.swp  .editorconfig  .gitattributes  .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  demo-ai  index.html  search-index.js
backtrace/: fn.demangle.html  fn.resolve.html  fn.trace.html  index.html  trait.Frame.html  trait.Symbol.html
clap/: enum.AppSettings.html  enum.ArgSettings.html  enum.ErrorKind.html  index.html  macro._clap_count_exprs!.html  macro.arg_enum!.html  macro.crate_version!.html  macro.value_t!.html  macro.value_t_or_exit!.html  macro.values_t!.html  macro.values_t_or_exit!.html  sidebar-items.js  struct.App.html  struct.Arg.html  struct.ArgGroup.html  struct.ArgMatches.html  struct.Error.html  struct.OsValues.html  struct.SubCommand.html  struct.Values.html  type.Result.html
cli/: Cargo.toml  README.md  demo-ai
clock_ticks/: fn.precise_time_ms.html  fn.precise_time_ns.html  fn.precise_time_s.html  index.html
core/: Cargo.toml
demos/: README.md
glium/: enum.Api.html  enum.DrawError.html  enum.GliumCreationError.html  enum.Handle.html  enum.Profile.html  enum.SwapBuffersError.html  fn.get_supported_glsl_version.html  macro.assert_no_gl_error!.html  macro.implement_buffer_content!.html  macro.implement_uniform_block!.html  macro.implement_vertex!.html  macro.program!.html  macro.uniform!.html  struct.BlitTarget.html  struct.Frame.html  struct.LinearSyncFence.html  struct.Rect.html  struct.SyncFence.html  struct.Version.html  struct.VertexBuffer.html  trait.CapabilitiesSource.html  trait.DisplayBuild.html  trait.GlObject.html  trait.Surface.html  type.VertexFormat.html
glutin/: enum.Api.html  enum.ContextError.html  enum.CreationError.html  enum.CursorState.html  enum.ElementState.html  enum.Event.html  enum.GlProfile.html  enum.GlRequest.html  enum.MouseButton.html  enum.MouseCursor.html  enum.MouseScrollDelta.html  enum.NativeMonitorId.html  enum.ReleaseBehavior.html  enum.Robustness.html  enum.TouchPhase.html  enum.VirtualKeyCode.html  struct.AvailableMonitorsIter.html  struct.GlAttributes.html  struct.HeadlessRendererBuilder.html  struct.PixelFormat.html  struct.PixelFormatRequirements.html  struct.PollEventsIterator.html  struct.Touch.html  struct.WaitEventsIterator.html  struct.WindowAttributes.html  struct.WindowBuilder.html  struct.WindowProxy.html
gui/: Cargo.toml  README.md
gui/src/: colors.rs  fragment.glsl  main.rs  models.rs  utils.rs
gui/src/draw/: mod.rs
itertools/: enum.EitherOrBoth.html  enum.MinMaxResult.html  struct.Batching.html  struct.Chunk.html  struct.Chunks.html  struct.Coalesce.html  struct.Combinations.html  struct.CombinationsN.html  struct.Dedup.html  struct.Flatten.html  struct.FormatDefault.html  struct.Group.html  (+28 more)
protocol/: .gitattributes  Cargo.toml  Makefile  build.rs
protocol/src/: grSim_Commands.rs  grSim_Packet.rs  grSim_Replacement.rs  lib.rs  messages_robocup_ssl_detection.rs  messages_robocup_ssl_geometry.rs  messages_robocup_ssl_geometry_legacy.rs  messages_robocup_ssl_refbox_log.rs  messages_robocup_ssl_wrapper.rs  messages_robocup_ssl_wrapper_legacy.rs  referee.rs
src/: ai.rs  (+14 more)
(+2245 files in other folders)
