[package]
name = "roboime-next-gui"
version = "0.1.0"
authors = ["Jan Segre <jan@segre.in>"]

[[bin]]
name = "roboime-next-gui"
path = "src/main.rs"
test = false
doc = false

[dependencies]
roboime-next = { path = ".." }
glium = "~0.14.0"
clap = "^2.4.0"
clock_ticks = "~0.1.0"
#image = "~0.10.0"
log = "0.3"
env_logger = "0.3"
