[package]
name = "roboime-next-protocol"
version = "0.1.0"
authors = ["Jan Segre <jan@segre.in>"]
# the build script is not being used right now
#build = "build.rs"

[dependencies]
protobuf = "~1.0.18"

#[build-dependencies.protobuf_build]
#git = "https://github.com/plietar/rust-protobuf-build.git"
